Added in a function to generate dynasty draft order

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(create_roster_df)
 export(create_season_weekly_df)
 export(create_starter_df)
 export(create_user_df)
+export(get_draft_order)
 export(get_player_df)
 export(get_weekly_points)
 export(optimize_starter_points)
@@ -14,6 +15,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,coalesce)
 importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
